# curation_tool

./: .gitignore  CLAUDE.md  COMMANDS.md  environment.yml  launch.sh  monitor.sh  pyproject.toml
docs/plans/: 2026-02-09-qwen-image-edit-curation.md
examples/: face_pipeline.yaml  sample_job.yaml
scripts/: download_model.py  smoke_test.py  test_inference.py
src/curation_tool/: __init__.py  batch.py  cli.py  comfyui_client.py  config.py  dataset_export.py  face_pipeline.py  gui.py  logging_config.py  pipeline.py  presets.py  stages.py  workflow_builder.py
tests/: conftest.py  test_batch.py  test_cli.py  test_comfyui_client.py  test_config.py  test_dataset_export.py  test_face_pipeline.py  test_gui.py  test_pipeline.py  test_presets.py  test_stages.py  test_workflow_builder.py
workflows/: caption_pipeline.json  face_restore.json  flux2_base.json  flux_base.json  pulid_identity.json  qwen_face_edit.json  upscale_resize.json
